add application helper : provide function

--- a/app/views/user_infos/show.html.erb
+++ b/app/views/user_infos/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<% provide(:title, @user_info.Name) %>
+
 <%= @user_info.StudentID %>
 <%= @user_info.rolesID %>
 <%= @user_info.Name %>
