revise signup page and add some css, ref: finish tutorial 7.2

--- a/app/views/user_infos/_form.html.erb
+++ b/app/views/user_infos/_form.html.erb
@@ -16,11 +16,14 @@
 
     <%= f.label "Student ID：" %>
     <%= f.text_field :StudentID %><br>
+    <%= f.label "Your Name："%>
+    <%= f.text_field :Name %><br>
+    <%= f.label "Your Email:" %>
+    <%= f.text_field :Email %><br>
     <%= f.label "Roles ID：" %>
     <%= f.text_field :rolesID %><br>
 
-    <%= f.label "Your Name："%>
-    <%= f.text_field :Name %><br>
+    
     <%= f.label "Password："%>
     <%= f.text_field :Pwd %>
     <%= f.submit %>
