add validates of user_onfo.Name email

--- a/app/views/user_infos/show.html.erb
+++ b/app/views/user_infos/show.html.erb
@@ -11,7 +11,7 @@
 <%= @user_info.Name %></h1>
 
 <%= "StudentID: " + @user_info.StudentID %><br>
-<%= "Email: " + @user_info.Email %><br>
+<%= "Email: " + @user_info.email %><br>
 
 
 
