--- a/app/views/user_infos/new.html.erb
+++ b/app/views/user_infos/new.html.erb
@@ -3,37 +3,27 @@
 
 
 <%= form_for(@user_info) do |f| %>
-  <% if @user_info.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user_info.errors.count, "error") %> prohibited this user_info from being saved:</h2>
-
-      <ul>
-      <% @user_info.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  
 
 
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-    
+    <%= render 'shared/error_messages' %>
 
     <%= f.label "Student ID：" %>
-    <%= f.text_field :StudentID %>
+    <%= f.text_field :StudentID, class: 'form-control' %>
     <%= f.label "Your Name："%>
-    <%= f.text_field :Name %>
+    <%= f.text_field :Name, class: 'form-control' %>
     <%= f.label "Your Email:" %>
-    <%= f.email_field :Email %>
+    <%= f.email_field :email, class: 'form-control' %>
     <%= f.label "Roles ID：" %>
-    <%= f.text_field :rolesID %>
+    <%= f.text_field :rolesID, class: 'form-control' %>
 
     
     <%= f.label "Password："%>
-    <%= f.password_field :Pwd %>
+    <%= f.password_field :Pwd, class: 'form-control' %>
     <%= f.label :Pwd_confirmation %>
-    <%= f.password_field :Pwd_confirmation %>
+    <%= f.password_field :Pwd_confirmation, class: 'form-control' %>
     <%= f.submit "Create my account", class: "btn btn-primary" %>
 
 
