--- a/app/views/user_infos/new.html.erb
+++ b/app/views/user_infos/new.html.erb
@@ -21,9 +21,9 @@
 
     
     <%= f.label "Password："%>
-    <%= f.password_field :Pwd, class: 'form-control' %>
+    <%= f.password_field :password, class: 'form-control' %>
     <%= f.label :Pwd_confirmation %>
-    <%= f.password_field :Pwd_confirmation, class: 'form-control' %>
+    <%= f.password_field :password_confirmation, class: 'form-control' %>
     <%= f.submit "Create my account", class: "btn btn-primary" %>
 
 
