add a little thing to view

--- a/app/views/user_infos/_form.html.erb
+++ b/app/views/user_infos/_form.html.erb
@@ -24,6 +24,10 @@
 
 
   <% end %>
+  <div class="gravatar_edit">
+      <%= gravatar_for @user_info %>
+      <a href="http://gravatar.com/emails" target="_blank">change</a>
+  </div>
   <!--<%= link_to 'Back', user_infos_path  %> -->
   </div>
 </div>
