--- a/app/views/user_infos/edit.html.erb
+++ b/app/views/user_infos/edit.html.erb
@@ -1,6 +1,9 @@
+<% provide(:title, "Edit user") %>
 <h1>Editing User Info</h1>
 
 <%= render 'form' %>
+
+
 
 <%= link_to 'Show', @user_info %> |
 <%= link_to 'Back', user_infos_path %>
