--- a/app/views/user_infos/show.html.erb
+++ b/app/views/user_infos/show.html.erb
@@ -8,17 +8,18 @@
     <section class="user_info">
 
       <h1> <%= gravatar_for @user_info %>
-<%= @user_info.Name %></h1>
+            <%= @user_info.Name %>
+      </h1>
 
-<%= "StudentID: " + @user_info.StudentID %><br>
-<%= "Email: " + @user_info.email %><br>
+            <%= "StudentID: " + @user_info.StudentID %><br>
+            <%= "Email: " + @user_info.email %><br>
 
 
 
 
-<%= link_to 'Edit', edit_user_info_path(@user_info) %> 
-<%= link_to "Delete", @user_info, method: :delete %>
-<%= link_to 'Back', user_infos_path %>
+            <%= link_to 'Edit', edit_user_info_path(@user_info) %> 
+            <%= link_to "Delete", @user_info, method: :delete %>
+            <%= link_to 'Back', user_infos_path %>
 
     </section>
   </aside>
