add paginate on user&item list

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Listing Items</h1>
 
+<%= will_paginate %>
+
 <table>
   <thead>
     <tr>
@@ -20,6 +22,8 @@
     <% end %>
   </tbody>
 </table>
+
+<%= will_paginate %>
 
 <br>
 
