--- a/app/views/user_infos/index.html.erb
+++ b/app/views/user_infos/index.html.erb
@@ -4,6 +4,8 @@
 <h1>Listing Users</h1>
 
 
+<%= will_paginate %>
+
 <ul class="users">
   <% @user_infos.each do |user| %>
     <li>
@@ -12,6 +14,8 @@
     </li>
   <% end %>
 </ul>
+
+<%= will_paginate %>
 
 <br>
 <%= link_to 'New User info', new_user_info_path %>
