render the paginate

--- a/app/views/user_infos/index.html.erb
+++ b/app/views/user_infos/index.html.erb
@@ -7,12 +7,9 @@
 <%= will_paginate %>
 
 <ul class="users">
-  <% @user_infos.each do |user| %>
-    <li>
-      <%= gravatar_for user %>
-      <%= link_to user.Name, user %>
-    </li>
-  <% end %>
+
+      <%= render @user_infos %>
+
 </ul>
 
 <%= will_paginate %>
