--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -194,6 +194,17 @@ input {
   }
 }
 
+/* Items index */
+
+.items {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 2px solid $gray-lighter;
+  }
+}
 
 
 
