--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,24 +4,18 @@
 
 <%= will_paginate %>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<ul class="items">
     <% @items.each do |item| %>
-      <tr>
-        <td><%= link_to item.Name, item %></td>
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <li>
+        <%= link_to item.Name, item %>
+        <%= link_to 'Show', item %>
+        <%= link_to 'Edit', edit_item_path(item) %>
+        <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </li>
     <% end %>
-  </tbody>
-</table>
+</ul>
+
+
 
 <%= will_paginate %>
 
