only admin can destroy and add admin(boolean) into user_infos for distinguishing who is admin

--- a/app/views/user_infos/_user_info.html.erb
+++ b/app/views/user_infos/_user_info.html.erb
@@ -1,5 +1,9 @@
 <li>
   <%= gravatar_for user_info %>
   <%= link_to user_info.Name, user_info %>
-
+  <!-- admin can delete the other user include admin, but cann't delete himself/herself -->
+  <% if current_user.admin? && !current_user?(user_info) %>
+    | <%= link_to "delete", user_info, method: :delete,
+                                  data: { confirm: "You sure?" } %>
+  <% end %>
 </li>
